Followup after codereview with Eld.